services/unifi/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
        app.kubernetes.io/part-of: asterism
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: unifi
          image: unifi
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
