services/unifi/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  selector:
    app.kubernetes.io/name: unifi
  ports:
    - name: http
      port: 80
      targetPort: http
